fix: fix missing pr-4 classname and column-gap property

--- a/src/components/App/app.module.css
+++ b/src/components/App/app.module.css
@@ -6,4 +6,5 @@
 
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 1fr;
+  column-gap: 40px;
 }
